Added page content

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Talk to the croissant</title>
+    <link rel="stylesheet" href="/src/style.css"" />
   </head>
-  <body></body>
+  <body>
+    <h1>Talk to the croissant 🥐</h1>
+
+    <p>
+      Wanna chat about croissants? No other pastry chat please. Email me at
+      <a href="mailto:croissantfiend@foodface.com"
+        >croissantfiend@foodface.com</a
+      >
+    </p>
+    <a href="/index.html">Homepage</a>
+    <a href="/photo.html">Photo</a>
+    <a href="/contact.html">Contact</a>
+  </body>
 </html>
