Fixed contact css link. Added styling to homepage

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Talk to the croissant</title>
-    <link rel="stylesheet" href="/src/style.css"" />
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <h1>Talk to the croissant 🥐</h1>
@@ -16,8 +16,12 @@
         >croissantfiend@foodface.com</a
       >
     </p>
-    <a href="/index.html">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <div class="links">
+      <a href="/index.html" class="links">Homepage</a>
+
+      <a href="/photo.html" class="links">Photo</a>
+
+      <a href="/contact.html" class="links">Contact</a>
+    </div>
   </body>
 </html>
