--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <p>
       Azealia Banks once said of croissants in her song titled 1991:
       <br />
-      <br />
-      "Oh là là là, flirting with a cool French dude named Antoine / Wanna taste
-      the pastry chocolate"
+      
+      <div class="lyrics">"Oh là là là, flirting with a cool French dude named Antoine / Wanna taste
+      the pastry chocolate"</div>
     </p>
 
     <div class="links">
