Added alt text to links and images plus heading meta descriptions

--- a/contact.html
+++ b/contact.html
@@ -4,24 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Talk to the croissant</title>
+    <title>Contact me: Talk to the croissant</title>
     <link rel="stylesheet" href="/src/style.css" />
+    <meta
+      name="description"
+      content="You can contact us here about anything croissant-related or perhaps different pastries you'd like to see featured."
+    />
   </head>
   <body>
     <h1>Talk to the croissant 🥐</h1>
 
     <p>
       Wanna chat about croissants? No other pastry chat please. Email me at
-      <a href="mailto:croissantfiend@foodface.com"
+      <a
+        href="mailto:croissantfiend@foodface.com"
+        alt="Email address croissantfiend@foodface.com"
         >croissantfiend@foodface.com</a
       >
     </p>
     <div class="links">
-      <a href="/index.html" class="links">Homepage</a>
+      <a href="/index.html" class="links" alt="Homepage">Homepage</a>
 
-      <a href="/photo.html" class="links">Photo</a>
+      <a href="/photo.html" class="links" alt="Photo gallery">Photo</a>
 
-      <a href="/contact.html" class="links">Contact</a>
+      <a href="/contact.html" class="links" alt="Contact me">Contact</a>
     </div>
   </body>
 </html>
