--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissant or just Angryyant?</title>
-
+    <title>Croissant or just Angryyant? Find out about Croissants!</title>
+ <meta name="description"  content="This is probably the best page about croissants on the internet, featuring Azelia Banks" />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <h1>Croissant 🥐</h1>
+    <h1>Welcome to your Croissant home 🥐</h1>
 
     <p>
       Azealia Banks once said of croissants in her song titled 1991:
@@ -20,11 +20,11 @@
     </p>
 
     <div class="links">
-      <a href="/index.html" class="links">Homepage</a>
+      <a href="/index.html" class="links" alt="Homepage">Homepage</a>
 
-      <a href="/photo.html" class="links">Photo</a>
+      <a href="/photo.html" class="links" alt="Photo gallery">Photo</a>
 
-      <a href="/contact.html" class="links">Contact</a>
+      <a href="/contact.html" class="links" alt="Contact me">Contact</a>
     </div>
   </body>
 </html>
