--- a/photo.html
+++ b/photo.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Croissants to please your eyes</title>
-    <link rel="stylesheet" href="/src/style.css"" />
+    <title>Photos: Croissants to please your eyes</title>
+    <link rel="stylesheet" href="/src/style.css" />
+    <meta
+      name="description"
+      content="This is probably the photo page showing croissants on the internet, featuring Azelia Banks"
+    />
   </head>
   <body>
     <h1>Croissant Visuals 📷</h1>
     <p>Azelia knows her croissant business</p>
     <img
       src="https://complex-res.cloudinary.com/image/upload/lal9rngs2axyjchsqvc4.jpg"
-      alt=""
+      alt="Azelia Banks presenting her croissant basket"
     />
     <div class="links">
-      <a href="/index.html" class="links">Homepage</a>
+      <a href="/index.html" class="links" alt="Homepage">Homepage</a>
 
-      <a href="/photo.html" class="links">Photo</a>
+      <a href="/photo.html" class="links" alt="Photo gallery">Photo</a>
 
-      <a href="/contact.html" class="links">Contact</a>
+      <a href="/contact.html" class="links" alt="Contact me">Contact</a>
     </div>
   </body>
 </html>
