Changed alt to title on link descriptions

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </p>
 
     <div class="links">
-      <a href="/index.html" class="links" alt="Homepage">Homepage</a>
+      <a href="/index.html" class="links" title="Homepage">Homepage</a>
 
-      <a href="/photo.html" class="links" alt="Photo gallery">Photo</a>
+      <a href="/photo.html" class="links" title="Photo gallery">Photo</a>
 
-      <a href="/contact.html" class="links" alt="Contact me">Contact</a>
+      <a href="/contact.html" class="links" title="Contact me">Contact</a>
     </div>
   </body>
 </html>
