Corrected spelling of Azealia

--- a/photo.html
+++ b/photo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/src/style.css" />
     <meta
       name="description"
-      content="This is probably the photo page showing croissants on the internet, featuring Azelia Banks"
+      content="This is probably the photo page showing croissants on the internet, featuring Azealia Banks"
     />
   </head>
   <body>
@@ -16,7 +16,7 @@
     <p>Azelia knows her croissant business</p>
     <img
       src="https://complex-res.cloudinary.com/image/upload/lal9rngs2axyjchsqvc4.jpg"
-      alt="Azelia Banks presenting her croissant basket"
+      alt="Azealia Banks presenting her croissant basket"
     />
     <div class="links">
       <a href="/index.html" class="links" title="Homepage">Homepage</a>
