--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Croissant or just Angryyant? Find out about Croissants!</title>
- <meta name="description"  content="This is probably the best page about croissants on the internet, featuring Azelia Banks" />
+ <meta name="description"  content="This is probably the best page about croissants on the internet, featuring Azealia Banks" />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
