--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
       Wanna chat about croissants? No other pastry chat please. Email me at
       <a
         href="mailto:croissantfiend@foodface.com"
-        alt="Email address croissantfiend@foodface.com"
+        title="Email address croissantfiend@foodface.com"
         >croissantfiend@foodface.com</a
       >
     </p>
